// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLookupFormatEditor should render multiple lookup entries and unknown key value 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Key"
            id="indexPatternManagement.staticLookup.keyLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Value"
            id="indexPatternManagement.staticLookup.valueLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
        Object {
          "index": 1,
        },
        Object {
          "index": 2,
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add entry"
      id="indexPatternManagement.staticLookup.addEntryButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Value for unknown key"
        id="indexPatternManagement.staticLookup.unknownKeyLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value="test value"
    />
  </EuiCompressedFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`StaticLookupFormatEditor should render normally 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Key"
            id="indexPatternManagement.staticLookup.keyLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Value"
            id="indexPatternManagement.staticLookup.valueLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add entry"
      id="indexPatternManagement.staticLookup.addEntryButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Value for unknown key"
        id="indexPatternManagement.staticLookup.unknownKeyLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value=""
    />
  </EuiCompressedFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;
